--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.19.0",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
+    "react-card-flip": "^1.0.10",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
     "typescript": "^3.7.3"
